fix model on ie11

--- a/src/components/modal/content/US-EZP/styles/tabs.scss
+++ b/src/components/modal/content/US-EZP/styles/tabs.scss
@@ -80,6 +80,6 @@
         opacity: 1;
         pointer-events: all;
         transition-delay: 0s;
-        visibility: initial;
+        visibility: visible;
     }
 }
