--- a/src/components/modal/content/US/styles/tabs.scss
+++ b/src/components/modal/content/US/styles/tabs.scss
@@ -105,6 +105,6 @@
         transition-delay: 0s;
         height: auto;
         position: relative;
-        visibility: initial;
+        visibility: visible;
     }
 }
